--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
     <title>My favorite dev tool</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>My Favorite Dev Tool</h1>
+    <ul>
+      <li>Atom</li>
+      <ul>
+        <li>Atom package manager</li>
+        <li>JavaScript</li>
+      </ul>
+      <li>Eclipse</li>
+      <li>Git</li>
+      <li>NodeJS</li>
+      <li>Swift</li>
+      <li>Chrome</li>
+    </ul>
+    <ol>
+      <h2>Favorite Dev Tools In Order</h2>
+      <li>Atom</li>
+
+      <li>Eclipse</li>
+      <li>Git</li>
+      <li>NodeJS</li>
+      <li>Swift</li>
+      <li>Chrome</li>
+    </ol>
   </body>
 </html>
